# CredoHealth

./: .gitignore  Plan.md  README.md  Task.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  fhir_client.py  main.py  mappers.py  models.py  repositories.py  schemas.py  services.py
backend/tests/: test_fhir_client.py  test_health.py  test_mappers.py  test_repositories.py  test_routes.py  test_services.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
